# modelchain

./: .coverage 3  .coverage 4  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: demo_generate.py  demo_sbom.json  dogfood_sbom.py  sample_model_info.json
output/: sbom_cyclonedx.json  sbom_modelchain.json  sbom_spdx.json
src/modelchain/: __init__.py  cli.py  generator.py  modelchain  models.py
src/modelchain/compliance/: __init__.py  eu_ai_act.py  nist_rmf.py  reporter.py
src/modelchain/integrations/: __init__.py  mcpguard_policy.py  mcpscop_report.py  taxonomy_adapter.py
src/modelchain/integrity/: __init__.py  diff.py  fingerprint.py  manifest.py
src/modelchain/provenance/: __init__.py  graph.py  tracker.py  verifier.py
src/modelchain/reporters/: __init__.py  console.py  html.py  json.py
src/modelchain/sbom/: __init__.py  builder.py  custom.py  cyclonedx.py  spdx.py  validator.py
src/modelchain/supply_chain/: __init__.py  auditor.py  dependency_analyzer.py  osv_client.py  vulnerability_db.py
src/modelchain/utils/: __init__.py  crypto.py  logging.py
tests/: test_cli_integration.py  test_generator.py  test_integrity.py  test_reporters.py
tests/test_compliance/: test_eu_ai_act.py  test_nist_rmf.py  test_reporter.py
tests/test_integrations/: test_mcpguard_policy.py  test_mcpscop_report.py  test_taxonomy_adapter.py
tests/test_provenance/: test_graph.py  test_tracker.py  test_verifier.py
tests/test_sbom/: test_builder.py  test_custom.py  test_cyclonedx.py  test_spdx.py  test_validator.py
tests/test_supply_chain/: test_auditor.py  test_dependency_analyzer.py  test_osv_client.py  test_vulnerability_db.py
tests/test_utils/: test_crypto.py  test_logging.py
