[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "modelchain-sbom"
version = "0.1.0"
description = "Software Bill of Materials (SBOM) generator for AI models with provenance tracking and cryptographic integrity verification"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Carlos Rocha", email = "carlosrocha@users.noreply.github.com"}]
keywords = [
    "sbom", "ai-security", "llm-security", "supply-chain",
    "provenance", "model-integrity", "cyclonedx", "spdx",
    "mlops", "model-governance", "compliance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12,<1",
    "rich>=13,<14",
    "pydantic>=2,<3",
    "jinja2>=3,<4",
    "pyyaml>=6,<7",
    "httpx>=0.27,<1",
    "packaging>=24,<25",
]

[project.urls]
Homepage = "https://github.com/Carlos-Projects/modelchain"
Documentation = "https://Carlos-Projects.github.io/modelchain"
Source = "https://github.com/Carlos-Projects/modelchain"
Issues = "https://github.com/Carlos-Projects/modelchain/issues"
Changelog = "https://github.com/Carlos-Projects/modelchain/blob/main/CHANGELOG.md"

[project.scripts]
modelchain = "modelchain.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1",
    "pre-commit>=3",
]
taxonomy = ["mcp-taxonomy>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["modelchain*"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["tests/"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "ARG", "B", "SIM", "PLC", "PLE", "RUF"]
ignore = ["E501", "B904", "B008"]

[tool.pytest.ini_options]
minversion = "8"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["modelchain"]
